# Code-Curator

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  README.rst  conftest.py  delete_node.py  forced_aligner.py  leetcode_main.py  main.py  pyproject.toml  todo.rst  video_mapper.py
docs/source/: animations.code_transform.rst  animations.data_structure_animation.rst  animations.rst  animations.singly_linked_list.add_first.rst  animations.singly_linked_list.add_last.rst  animations.singly_linked_list.animation_forecasting.forecasted_subanimation_group_creator.rst  animations.singly_linked_list.animation_forecasting.interdependent_subanimation_finder.rst  animations.singly_linked_list.animation_forecasting.rst  animations.singly_linked_list.animation_forecasting.sll_animation_forecaster.rst  animations.singly_linked_list.data_structure_animator.rst  animations.singly_linked_list.insert.rst  animations.singly_linked_list.remove_at.rst  animations.singly_linked_list.remove_first.rst  animations.singly_linked_list.remove_last.rst  animations.singly_linked_list.rst  animations.singly_linked_list.subanimations.base_subanimation.rst  animations.singly_linked_list.subanimations.center_sll.rst  animations.singly_linked_list.subanimations.change_next_pointer.rst  animations.singly_linked_list.subanimations.curve_pointer.rst  animations.singly_linked_list.subanimations.empty.rst  animations.singly_linked_list.subanimations.fade_in_container.rst  animations.singly_linked_list.subanimations.fade_in_mobject.rst  animations.singly_linked_list.subanimations.fade_out_container.rst  animations.singly_linked_list.subanimations.fade_out_mobject.rst  animations.singly_linked_list.subanimations.flatten_list.rst  animations.singly_linked_list.subanimations.flatten_list_for_remove.rst  animations.singly_linked_list.subanimations.flatten_tail.rst  animations.singly_linked_list.subanimations.grow_pointer.rst  animations.singly_linked_list.subanimations.leaf_subanimation.rst  (+111 more)
leetcode/: aligned_animation_script.py  aligned_script.py  aligned_word.py  alignment_parser.py  base_code_scene.py  base_scene.py  script_order.py  script_parser.py  script_section.py
pointers/: pointer.py
singly_linked_list/: singly_linked_list.py
src/: base_scene.py  constants.py  custom_vmobject.py  fix_timings_file.py  main.py  manim_property.py  null_vmobject.py  scene_scheduler.py
src/animations/: animation_package.py  (+4 more)
static_array_parts/: static_array.py
static_matrix_parts/: static_matrix.py
tests/: __init__.py  scenes.py
(+753 files in other folders)
