[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Code-Curator"
version = "0.0.1"
dependencies = [
    "manim >= 0.17.3",
    "pandas >= 2.0.2",
]

[tool.black]
line-length = 88
preview = true
target-version = ['py310']

[tool.flake8]
# flake8-import-order
application_import_names = "code_curator"
import-order-style = "smarkets"

ignore = "AZ300"
max-line-length = 120
pyproject-flake8 = "6.0.0"
flake8-2020 = "1.8.0"
flake8-dunder-all = "0.3.0"
flake8-encodings = "0.5.0"
flake8-requirements = "1.7.8"
flake8-bugbear = "23.7.10"
flake8-secure-coding-standard = "1.4.0"
flake8-useless-assert = "0.4.4"
flake8-class-attributes-order = "0.1.3"
flake8-clean-block = "0.1.2"
flake8-commas = "2.1.0"
flake8-comprehensions = "3.12.0"
flake8-datetimez = "20.10.0"
flake8-implicit-str-concat = "0.4.0"
flake8-literal = "1.3.0"
flake8-multiline-containers = "0.0.19"
flake8-newspaper-style = "0.4.2"
flake8-picky-paranetheses = "0.5.0"
flake8-return = "1.2.0"
tryceratops = "2.3.2"
flake8-debugger = "4.1.2"
flake8-no-pep420 = "2.4.0"
flake8-use-pathlib = "0.3.0"
flake8-builtins = "2.1.0"
flake8-functions-names = "0.0.2"
pep8-naming = "0.13.3"
cohesion = "1.1.0"
flake8-expression-complexity = "0.0.11"
flake8-comments = "0.1.1"
flake8-eradicate = "1.4.0"
flake8-docstrings-complete = "1.1.0"
flake8-rst-docstrings = "0.3.0"
flake8-sphinx-links = "0.2.1"
# flake8-alphabetize = "0.0.21"
flake8-import-order = "0.18.2"
flake8-type-checking = "2.4.0"
flake8-aaa = "0.15.0"
flake8-pytest-style = "1.7.2"

[project.scripts]
curate = "code_curator.main:main"
