[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Code-Curator"
version = "0.0.1"
dependencies = [
    "manim >= 0.18",
    "pandas >= 2.0.2",
]

[tool.black]
line-length = 120
preview = true
target-version = ['py312']

[project.scripts]
curate = "code_curator.main:main"
cpm = "code_curator.main:postmortem_main"
